# Internship-Practice

./: .gitignore  README.md  pyproject.toml
01042026_wednesday/CustomMiddleware/: main.py
03032026_tuesday/SVC/: main.py
05022026_Thursday/flask/: app.py
05022026_Thursday/numpy_pandas/: numpy_pandas.py
05022026_thursday/numpy_pandas/: iris.csv
05032026_thursday/KNN/: knn.pkl  main.py
08042026_wednesday/: main.py
09022026_monday/FastAPI/: main.py
09022026_monday/Flask/: app.py
10022026_Tuesday/pyodbc/: practice_test.py
10022026_tuesday/pyodbc/: main.py
10022026_tuesday/sqlalchemy/: main.py
10032026_tuesday/KMeansClustering/: main.py
11022026_wednesday/mongodb/: main.py
12022026_thursday/mongodb/: main.py
13022026_friday/bs4/: main.py
13032026_friday/Apriori Algorithm/: main.py
16022026_monday/Beautiful Soup/: practice.py
16022026_monday/Selenium/: practice.py  practice_selenium.csv
16022026_monday/Web Scraping/: main.py
17022026_tuesday/Web Scraping/: beautiful_soup.py  selenium_1.py
18032026_wednesday/CNN/: cnn.py
18032026_wednesday/LSTM/: lstm.py
19022026_thursday/: linear_regression.ipynb
19032026_thursday/RNN/: rnn.py
20022026_friday/: linear_regression.py
20032026_friday/Transformers/: transformers.py
23022026_monday/linear_regression/: main.py
23022026_monday/logistic_regression/: main.py
23032026_monday/Langchain/: main.py
24022026_tuesday/DecisionTreeClassifier/: main.py
24032026_tuesday/Langchain/: main.py
25022026_wednesday/DecisionTreeRegressor/: main.py
25032026_wednesday/Langchain/: tools.py
(+23 files in other folders)
