[project]
name = "internship-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Samarth-Prajapati",email = "samarthp475@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "flask (>=3.1.2,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
