[project]
name = "internship-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Samarth-Prajapati",email = "samarthp475@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "fastapi (>=0.128.5,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pyodbc (>=5.3.0,<6.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "selenium (>=4.40.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
